<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.parkinGenie.AddCarPark">

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="24dp"
        android:onClick="createCarPark"
        android:text="@string/button_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_payment"
        app:layout_constraintVertical_bias="1.0" />

    <EditText android:layout_height="42dp" android:layout_width="215dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="461dp" android:layout_marginLeft="64dp" android:layout_marginStart="64dp" android:id="@+id/editText_name" app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/editText_website" android:inputType="" android:importantForAutofill="no" android:hint="@string/Name" android:ems="10" android:layout_marginRight="132dp" android:layout_marginEnd="132dp" android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/editText_website"
        android:layout_width="221dp"
        android:layout_height="38dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:ems="10"
        android:hint="@string/Website"
        android:importantForAutofill="no"
        android:inputType=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />

    <EditText android:layout_height="38dp" android:layout_width="229dp" app:layout_constraintTop_toBottomOf="@+id/editText_website" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="64dp" android:layout_marginStart="64dp" android:id="@+id/editText_address" android:inputType="" android:importantForAutofill="no" android:hint="@string/Address" android:ems="10" android:layout_marginRight="132dp" android:layout_marginEnd="132dp" android:layout_marginTop="16dp"/>

    <EditText android:layout_height="48dp" android:layout_width="201dp" app:layout_constraintTop_toBottomOf="@+id/editText_address" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="64dp" android:layout_marginStart="64dp" android:id="@+id/editText_phone" android:inputType="phone" android:importantForAutofill="no" android:hint="@string/Phone" android:ems="10" android:layout_marginRight="132dp" android:layout_marginEnd="132dp" android:layout_marginTop="16dp"/>

    <EditText android:layout_height="50dp" android:layout_width="155dp" app:layout_constraintTop_toBottomOf="@+id/editText_phone" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="64dp" android:layout_marginStart="64dp" android:id="@+id/editText_gps" android:inputType="" android:importantForAutofill="no" android:hint="@string/GPS" android:ems="10" android:layout_marginRight="132dp" android:layout_marginEnd="132dp" android:layout_marginTop="24dp"/>

    <EditText android:layout_height="40dp" android:layout_width="177dp" app:layout_constraintTop_toBottomOf="@+id/editText_gps" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="64dp" android:layout_marginStart="64dp" android:id="@+id/editText_totspaces" android:inputType="number" android:importantForAutofill="no" android:hint="@string/TSpaces" android:ems="10" android:layout_marginRight="132dp" android:layout_marginEnd="132dp" android:layout_marginTop="16dp"/>

    <EditText android:layout_height="41dp" android:layout_width="171dp" app:layout_constraintVertical_bias="0.098" app:layout_constraintTop_toBottomOf="@+id/editText_totspaces" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="64dp" android:layout_marginLeft="64dp" android:layout_marginStart="64dp" android:id="@+id/editText_freespaces" app:layout_constraintBottom_toTopOf="@+id/button_add" android:inputType="number" android:importantForAutofill="no" android:hint="@string/FSpaces" android:ems="10" android:layout_marginRight="132dp" android:layout_marginEnd="132dp"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toBottomOf="@+id/editText_freespaces" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="64dp" android:layout_marginStart="64dp" android:id="@+id/editText_HRestriction" android:inputType="text" android:importantForAutofill="no" android:hint="@string/Height" android:ems="10" android:layout_marginRight="132dp" android:layout_marginEnd="132dp" android:layout_marginTop="16dp"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toBottomOf="@+id/editText_HRestriction" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="64dp" android:layout_marginStart="64dp" android:id="@+id/editText_payment" android:inputType="text" android:importantForAutofill="no" android:hint="@string/Payment" android:ems="10" android:layout_marginRight="132dp" android:layout_marginEnd="132dp" tools:layout_editor_absoluteY="610dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
